--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ header {
 }
 
 body {
-  margin-bottom: 60px
+  margin-bottom: 60px;
 }
 
 footer {
@@ -18,6 +18,13 @@ footer {
   height: 60px;
   line-height: 60px;
   background-color: lightgrey;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .form-signin,
